--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,17 @@
 services:
+
+  appsmith:
+    image: index.docker.io/appsmith/appsmith-ce
+    container_name: appsmith
+    ports:
+      - "80:80"
+      - "443:443"
+    networks:
+      qsmith-network:
+    volumes:
+      - ./stacks:/appsmith-stacks
+    restart: unless-stopped
+
   elasticmq:
     image: softwaremill/elasticmq-native
     container_name: elasticmq
@@ -8,12 +21,12 @@ services:
     volumes:
       - ./elasticmq.conf:/opt/elasticmq.conf
 
-  queue-tester:
+  qsmith:
     build:
       context: .
       dockerfile: docker/Dockerfile
-    image: queue-tester
-    container_name: queue-tester
+    image: qsmith
+    container_name: qsmith
     working_dir: /app
     volumes:
       - ./src:/app
@@ -21,10 +34,9 @@ services:
     ports:
       - "8082:8082"
     networks:
-      - wildflyNet
+      - qsmith-network
     environment:
       - PYTHONPATH=/app
 
 networks:
-  wildflyNet:
-    external: true
+  qsmith-network:
