docker compose fixed

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
     working_dir: /app
     volumes:
       - ./src:/app
+      - ./data:/app/data
       - ./requirements.txt:/app/requirements.txt
     ports:
       - "8082:8082"
