QSM-001: nuova mandata

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,5 +9,5 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY src/ ./
 
 ENTRYPOINT ["uvicorn", "main:app"]
-CMD ["--host", "0.0.0.0", "--port", "8082"]
+CMD ["--host", "0.0.0.0", "--port", "8082", "--reload"]
 
